--- a/index.html
+++ b/index.html
@@ -3,32 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
-    <title>Cameron Pittman: Portfolio</title>
+    <meta name="description" content="A sample portfolio site I optimized.">
+    <meta name="author" content="Jonathan Chaplin">
+    <title>Jonathan Chaplin: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="http: //fonts.googleapis.com/css?family=Open+Sans:400,700" >
+    <link href="css/style.css" >
+    <link href="css/print.css" media="print">
+    <link href="css/mobile.css" media="screen and (max-width: 480px)">
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
-
-    <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // Optional TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img class="header-image" src="img/profilepic.jpg"></a>
+      <p class="header-subheader">Jonathan Chaplin<br><span class="header-job-title">Software Developer</span></p>
     </header>
 
     <div class="container">
@@ -50,6 +43,7 @@
             <p>Hey... this class looks familiar.</p>
           </li>
 
+
           <li>
             <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
             <a href="project-mobile.html">Mobile Web Development</a>
@@ -65,7 +59,7 @@
       </div>
 
       <footer>
-        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+        <p>&copy; Web Performance 2017 <span id="crp-stats"></span></p>
       </footer>
     </div>
   </body>
