--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,6 @@
         header p { padding-left: 4.5em;}
       }
     </style>
-
-    <link href="http: //fonts.googleapis.com/css?family=Open+Sans:400,700" >
     <script async src="js/analytics.js"></script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
@@ -107,7 +105,7 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <img style="width: 100px;" src="views/images/pizzeria100x75.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -118,5 +116,13 @@
         <p>&copy; Web Performance 2017 <span id="crp-stats"></span></p>
       </footer>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+    <script type="text/javascript">
+      WebFont.load({
+        google: {
+          families: ['Open Sans']
+        }
+      });
+    </script>
   </body>
 </html>
